# ChangeLog for app-doc/doxygen
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-doc/doxygen/ChangeLog,v 1.171 2009/12/26 17:24:39 pva Exp $

  26 Dec 2009; Peter Volkov <pva@gentoo.org> doxygen-1.4.7.ebuild,
  doxygen-1.5.4.ebuild, doxygen-1.5.5.ebuild, doxygen-1.5.6.ebuild,
  doxygen-1.5.7.1.ebuild, doxygen-1.5.8-r1.ebuild, doxygen-1.5.9.ebuild,
  doxygen-1.6.1.ebuild:
  virtual/ghostscript->app-text/ghostscript-gpl: ghostscript-gpl is the only
  implementation left in the tree.

*doxygen-1.6.1 (25 Sep 2009)

  25 Sep 2009; Steve Arnold <nerdboy@gentoo.org> -doxygen-1.6.0.ebuild,
  +doxygen-1.6.1.ebuild:
  Updated to current release; fixes eigen borkage plus a few other issues 
  (closes bugs 282598 and 283780).

  27 Aug 2009; Raúl Porcel <armin76@gentoo.org> doxygen-1.5.8-r1.ebuild:
  arm/ia64/sh/s390 stable wrt #263641

  27 Aug 2009; Steve Arnold <nerdboy@gentoo.org> doxygen-1.5.4.ebuild,
  doxygen-1.5.8-r1.ebuild, doxygen-1.5.9.ebuild, doxygen-1.6.0.ebuild:
  Update missing latex font deps (closes bug 274673).

*doxygen-1.5.9 (25 Aug 2009)

  25 Aug 2009; Steve Arnold <nerdboy@gentoo.org> +doxygen-1.5.9.ebuild:
  Adding version 1.5.9 until some issues are worked out.  This fixes some
  problems with 1.5.8, and 1.6.0 is masked for time being.  Fixes bug
  #275753.

*doxygen-1.6.0 (25 Aug 2009)

  25 Aug 2009; Steve Arnold <nerdboy@gentoo.org>
  +files/doxygen-1.5-dot-eps.patch, +doxygen-1.6.0.ebuild:
  Updated to latest upstream release (see bug #269961) and there is 
  already one reported failure (see bug #282598) which has been reported 
  upstream (http://bugzilla.gnome.org/show_bug.cgi?id=592975).

  12 Jul 2009; Tobias Klausmann <klausman@gentoo.org>
  doxygen-1.5.8-r1.ebuild:
  Stable on alpha, bug #263641

  09 Jul 2009; Jeroen Roovers <jer@gentoo.org> doxygen-1.5.8-r1.ebuild:
  Stable for HPPA (bug #263641).

*doxygen-1.5.8-r1 (17 Jun 2009)
