@@ -10,8 +10,8 @@ AUX doxywizard.png 4231 RMD160 b194049b42aad3466a5ef9c69ff3504536223dae SHA1 090
 DIST doxygen-1.5.7.1.src.tar.gz 4096168 RMD160 f9614bb076d6531334a212a95dfbb862a7502c69 SHA1 aecb0c453f76e900eb2aa8132ad063215005fca3 SHA256 7ce9cf96731121aa22365d2aef3dde841a3c4622d4d70282398438275ad26d29
 DIST doxygen-1.5.8.src.tar.gz 4125837 RMD160 e392cd00960c4036661c8cda3ec6bc6ee3fe300c SHA1 a55b1c41417be8acb3ac5e1553a711ffa437cba2 SHA256 01540aaf7e929e7784e3392331f2c915480acb174a16e8652855d90965f44ff8
 DIST doxygen-1.6.1.src.tar.gz 3902407 RMD160 0a9c5962dbd076bac418b85b72a4874576c9da4d SHA1 31f861841eba1ebdded1b4bf70bdecb42441dafd SHA256 4c5aedf052a14a0f7fe8c126140ff1c5c50887c74814a4804181c61625d539d3
-EBUILD doxygen-1.5.7.1.ebuild 5500 RMD160 7f78e2d0de948b3abec1353371bbce04f0e331b3 SHA1 b85aed6b9e8c3cbf49f94cdd64ed84aa68648f66 SHA256 85ef00b529623fff418490c1cac3848e4735e56ae855b8e7ae6b82036614876a
+EBUILD doxygen-1.5.7.1.ebuild 4901 RMD160 15894e83278e7d7c7c8cbc41051597d3dcc8d8a1 SHA1 c97ef778ce888c8644aa8837d727fa08ea5110f4 SHA256 a1ae6f178f834d5d396f0c78f1bc772c6be4edbb0839f629c8d48e04c3901071
 EBUILD doxygen-1.5.8-r1.ebuild 5550 RMD160 5f8f8d688a042aa294fc4630c8fa946f0abe16b0 SHA1 39707c9bec9c557a3f9d2cba7e1b6a0639a1aead SHA256 5d13f92d25f07d4e41d05b828a2f301db3f5b8942f6ccf6a40895c622408458d
 EBUILD doxygen-1.6.1.ebuild 5238 RMD160 80021596e652d626d3b14a8887710a238fdfcebd SHA1 7b433986ab9d5546ed4e0bb3d054fa22661a3768 SHA256 bfbcca8a1d242cd52026a420eecd575e1a688fd3ab1a81d15ad0cc76043c5277
-MISC ChangeLog 29178 RMD160 05a3d4dc96b3606e991426e4963fdfda25e66808 SHA1 3d1d6d5f80d914494ae3fea2aac3177e9c6bab72 SHA256 eed961f812542c08e5100ec83d6032ac43140fe36324c41f3081ff0f477cbb1b
+MISC ChangeLog 29365 RMD160 0686a01ab61e796def70676f18043ebcf90e4561 SHA1 91f02ec5b75c6fe36e93bde7bccc867914604fa6 SHA256 35b316762f47b079696d3fcb6c016f5720654960488b4e134d3d322b43120c55
 MISC metadata.xml 740 RMD160 288a23989773f251e7acccaf77ae390ca2376c3a SHA1 8fc5f720b18d2952fd0519fd73e3dcb66aa94ee4 SHA256 90abffce7a6f2d24635ea2cf3cb7e64c9374304d9f9daacf5f963e0d8bfcb4f8
