@@ -1,10 +1,10 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-doc/doxygen/doxygen-1.5.7.1.ebuild,v 1.5 2009/12/26 17:24:39 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-doc/doxygen/doxygen-1.5.7.1.ebuild,v 1.6 2010/01/02 22:22:09 yngwin Exp $
 
 EAPI=1
 
-inherit eutils flag-o-matic toolchain-funcs qt3 fdo-mime
+inherit eutils flag-o-matic toolchain-funcs fdo-mime
 
 DESCRIPTION="documentation system for C++, C, Java, Objective-C, Python, IDL, and other languages"
 HOMEPAGE="http://www.doxygen.org/"
@@ -13,10 +13,9 @@ SRC_URI="ftp://ftp.stack.nl/pub/users/dimitri/${P}.src.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
-IUSE="debug doc nodot qt3 latex elibc_FreeBSD"
+IUSE="debug doc nodot latex elibc_FreeBSD"
 
-RDEPEND="qt3? ( x11-libs/qt:3 )
-	latex? ( app-text/texlive-core
+RDEPEND="latex? ( app-text/texlive-core
 		dev-texlive/texlive-genericrecommended
 		dev-texlive/texlive-fontsrecommended
 		dev-texlive/texlive-latexrecommended
@@ -94,17 +93,7 @@ src_compile() {
 		my_conf="--prefix ${EPREFIX}/usr"
 	fi
 
-	if use qt3; then
-		einfo "using QTDIR: '$QTDIR'."
-		export LIBRARY_PATH="${QTDIR}/$(get_libdir):${LIBRARY_PATH}"
-		export LD_LIBRARY_PATH="${QTDIR}/$(get_libdir):${LD_LIBRARY_PATH}"
-		einfo "using QT LIBRARY_PATH: '$LIBRARY_PATH'."
-		einfo "using QT LD_LIBRARY_PATH: '$LD_LIBRARY_PATH'."
-		./configure ${my_conf} $(use_with qt3 doxywizard) \
-		|| die 'configure with qt3 failed'
-	else
-		./configure ${my_conf} || die 'configure failed'
-	fi
+	./configure ${my_conf} || die 'configure failed'
 
 	# and compile
 	emake CC="$(tc-getCC)" CXX="$(tc-getCXX)" LINK="$(tc-getCXX)" \
@@ -142,12 +131,6 @@ src_install() {
 	make DESTDIR="${D}" MAN1DIR=share/man/man1 \
 		install || die '"make install" failed.'
 
-	if use qt3; then
-		doicon "${FILESDIR}"/doxywizard.png
-		make_desktop_entry doxywizard "DoxyWizard ${PV}" \
-		"doxywizard.png" "Application;Development"
-	fi
-
 	dodoc INSTALL LANGUAGE.HOWTO README
 
 	# pdf and html manuals
@@ -164,7 +147,7 @@ pkg_postinst() {
 	fdo-mime_desktop_database_update
 
 	elog
-	elog "The USE flags qt3, doc, and latex will enable doxywizard, or"
+	elog "The USE flags doc, and latex will enable"
 	elog "the html and pdf documentation, respectively.  For examples"
 	elog "and other goodies, see the source tarball.  For some example"
 	elog "output, run doxygen on the doxygen source using the Doxyfile"
